--- a/index.css
+++ b/index.css
@@ -5,6 +5,46 @@ body .claz {
   font-size: 50px;
 }
 
+.header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-inline-start: 50px;
+  margin-inline-end: 50px;
+}
+.header img {
+  width: 250px;
+}
+
+.buttons {
+  display: flex;
+  flex-direction: row;
+}
+.buttons a {
+  text-decoration: none;
+}
+.buttons a .join-button-radius {
+  background-color: white;
+  border: none;
+  color: gray;
+  margin-right: 30px;
+  margin-top: 40px;
+}
+.buttons a .sign-button-radius {
+  color: #2560cf;
+  background-color: white;
+  border: 1px solid #2560cf;
+  margin-top: 30px;
+  min-width: 70px;
+  border-radius: 68px;
+  padding: 14px 36px;
+  cursor: pointer;
+  outline: none;
+}
+.buttons button {
+  font-size: 47px;
+}
+
 .page-context {
   display: flex;
   flex-direction: column;
@@ -12,7 +52,7 @@ body .claz {
 }
 .page-context p {
   font-size: 87px;
-  color: blue;
+  color: #2560cf;
   margin: 0;
 }
 .page-context__list {
