--- a/index.scss
+++ b/index.scss
@@ -1,3 +1,4 @@
+@import 'base';
 $myColor:black;
 body {
     font-size: 24px;
@@ -30,9 +31,7 @@ body {
             margin-top: 40px;
         }
         .sign-button-radius {
-            color: rgb(37, 96, 207);
-            background-color: white;
-            border: 1px solid rgb(37, 96, 207);
+            @include important-text;
             margin-top: 30px;
             min-width: 70px;
             border-radius: 68px;
